--- a/js_ex_6_external_script.html
+++ b/js_ex_6_external_script.html
@@ -10,7 +10,7 @@
 
 <p>This example links to external js file.</p>
 
-<script src="js_ex_6.js"></script>
+<script src="js_ex_6_function.js"></script>
 
 </body>
 </html>
